# canmv-k230-docs

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  build_sdk.sh  mkdocs.yml  requirements.txt
.github/workflows/: deploy.yml
apps/coremark/: CMakeLists.txt
apps/face_detect/: CMakeLists.txt
apps/face_detect/scripts/: evaluate_kmodel.py  step1_parse_model.py  step2_simplify_model.py  step3_compile_kmodel.py  step4_simulate_kmodel.py  step5_compare_results.py
apps/face_detect/src/: face_ae_roi.cc  main.cc  mobile_retinaface.cc  model.cc  util.cc  vo_test_case.h
apps/hello_world/: CMakeLists.txt
apps/hello_world/src/: hello.c
apps/sample_face_ae/: CMakeLists.txt
apps/sample_face_ae/src/: face_ae_roi.cc  face_ae_roi.h  main.cc  mobile_retinaface.cc  mobile_retinaface.h  model.cc  model.h  util.h
apps/sample_vicap/: CMakeLists.txt
apps/sample_vicap/src/: sample_vicap.c  vo_test_case.c  vo_test_case.h
apps/veg_classify/: CMakeLists.txt  check_data_hash.sh
apps/veg_classify/scripts/: config.yaml  dataset.py  split_data.py  step1_parse_model.py  step2_simplify_model.py  step3_compile_kmodel.py  step4_simulate_kmodel.py  step5_compare_results.py  train.py
apps/veg_classify/src/: classifier.cc  classifier.h  main.cc  model.cc  model.h  util.h  vo_test_case.h
cmake/: k230-deploy.cmake  toolchain-k230-linux.cmake  toolchain-k230-rtsmart.cmake
cmake/scripts/: deploy.sh  run.sh
docs/en/: index.md
docs/en/ai/: face_detect.md  veg_classify.md
docs/en/development/: bigcore_rtsmart_mpp.md  coremark.md  hello_world.md  memory_layout.md  rtsmart_boot.md  rtt_ctrl.md  sample_face_ae.md  sample_vicap.md  sdk_build.md  usb_cdc_ether.md
docs/en/setup/: partition.md  wifi.md
docs/en/technical/: bigcore_rtsmart_mpp.md  usb_cdc_ether.md
docs/ja/: index.md
docs/ja/ai/: face_detect.md  veg_classify.md
docs/ja/development/: bigcore_rtsmart_mpp.md  coremark.md  hello_world.md  memory_layout.md  rtsmart_boot.md  rtt_ctrl.md  sample_face_ae.md  sample_vicap.md  sdk_build.md  usb_cdc_ether.md
docs/ja/setup/: partition.md  wifi.md
docs/ja/technical/: bigcore_rtsmart_mpp.md  usb_cdc_ether.md
scripts/: build_sdk.sh
